@@ -1,5 +1,6 @@
 Changes for 1.1alpha10:
 
+ - added selection of hosts for event history (Alexei)
  - new item type - 'log' (Alexei)
  - added table 'history_log' (Alexei)
  - fixed issue with high agent's CPU usage for active checks (Alexei)
